--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,3 @@
-<div class="min-h-screen bg-netpay-light-gray">
+<div class="min-h-screen bg-light-gray">
   <app-merchant-onboarding></app-merchant-onboarding>
 </div>
