--- a/src/app/features/admin/settings/admin-settings.component.html
+++ b/src/app/features/admin/settings/admin-settings.component.html
@@ -3,7 +3,10 @@
   <app-admin-sidebar></app-admin-sidebar>
 
   <!-- Main Content Area -->
-  <div class="ml-64 flex-1">
+  <div 
+    class="flex-1 transition-all duration-300 ease-in-out"
+    [class]="isSidebarCollapsed() ? 'ml-20' : 'ml-64'"
+  >
     <!-- Header -->
     <app-admin-header></app-admin-header>
     
